# 3dgs-workspace

./: .gitignore  .shellcheckrc  Makefile  README.md  docker-compose.yml  run.sh
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
docker/: build_and_push.sh  run-pipeline.sh
docker/3dgs-colmap/: Dockerfile  clean_colmap_sparse.py  convert.sh  panorama_sfm.py  run-container.sh  run-panorama-sfm.sh
docker/3dgsworkspace/: .dockerignore  Dockerfile  requirements.txt  run-container.sh
docker/pre-processing/: .dockerignore  Dockerfile  inpaint.py  pyproject.toml  requirements.txt  run_inpainting.sh
docker/pre-processing/src/inpaint360/: __init__.py  backends.py  batch.py  cli.py  config.py  inpaint.py  interactive.py  masks.py  reprojection.py
